# nasa-nex-gddp-cmip6

./: .gitignore  CHANGELOG.md  README-template.md  docker_env  environment.yml  pyproject.toml  setup.cfg
docker/: Dockerfile  build  cibuild  lint  stac  test
docs/: example.ipynb  installation_and_basic_usage.ipynb
examples/: collection.json
scripts/: test  update-examples
src/stactools/nasa_nex_gddp_cmip6/: __init__.py  collection.json  commands.py  stac.py
tests/: test_module.py  test_stac.py
tests/data/: attrs.json  data_vars_attrs.json  global_attrs.json  item.json
